objects/SF_Async_Log__c/SF_Async_Log__c.object-meta.xml
<CustomObject>
    <description>Execution history</description>
    <label>SF Async Log</label>
    <nameField>
        <label>SF Async Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SF Async Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>