objects/SF_Async_Log__c/fields/CPU_Time__c.field-meta.xml
<CustomField>
    <fullName>CPU_Time__c</fullName>
    <description>CPU time consumed (ms).</description>
    <label>CPU Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>