objects/SF_Async_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Stack trace or success message.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>