objects/SF_Async_Log__c/fields/SOQL_Queries__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries__c</fullName>
    <description>Number of SOQL queries executed</description>
    <label>SOQL Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>