objects/SF_Async_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SF_Async__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>